# online-inertial-parameter-estimation

./: README.md  sync_with_tree.py
iCub/contrib/src/inertiaObserver/app/conf/: inertiaObserver.ini
iCub/contrib/src/inertiaObserver/cartesianRandomTrajectory/: CMakeLists.txt  cartesian_random_trajectory.cpp
iCub/contrib/src/inertiaObserver/offlineInertiaLearner/: CMakeLists.txt  MatVetIO.cpp  offlineInertiaLearner.cpp  onlineMean.h
iCub/contrib/src/inertiaObserver/offlineInertiaLearner/old_static/: CMakeCache.txt  CMakeLists.txt  Makefile  MatVetIO.cpp  cmake_install.cmake  onlineMean.h  staticInertiaLearner  staticInertiaLearner.cpp
iCub/contrib/src/inertiaObserver/src/: MatVetIO.cpp  observerThread.cpp  observerThread.h
iCub/main/src/libraries/iDyn/: CMakeLists.txt
iCub/main/src/libraries/iDyn/include/iCub/iDyn/: iDynBody.h  iDynInv.h  iDynRegressor.h
iCub/main/src/libraries/iDyn/src/: iDynBody.cpp  iDynInv.cpp  iDynRegressor.cpp
iCub/main/src/libraries/iDyn/tutorials/oneChainDynamics/: CMakeCache.txt  Makefile  cmake_install.cmake  oneChainDynamics
iCub/main/src/libraries/iDyn/tutorials/oneChainInvSensorRegressor/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  oneChainInvSensorRegressor
iCub/main/src/libraries/learningMachine/: CMakeLists.txt
iCub/main/src/libraries/learningMachine/include/iCub/learningMachine/: IFixedSizeMatrixInputLearner.h  IMachineMatrixInputLearner.h  IParameterLearner.h  Math.h  MultiTaskLinearFixedParameters.h  MultiTaskLinearGPRLearner.h  MultiTaskLinearGPRLearnerFixedParameters.h  Serialization.h
iCub/main/src/libraries/learningMachine/src/: IFixedSizeMatrixInputLearner.cpp  Math.cpp  MultiTaskLinearFixedParameters.cpp  MultiTaskLinearGPRLearner.cpp  MultiTaskLinearGPRLearnerFixedParameters.cpp  Serialization.cpp
